GNOME Shell races with DRM GPU drivers
Affected version
- Ubuntu 22.04
- GNOME Shell 42.5-0ubuntu1
- Wayland
- Extensions N/A
Bug summary
I've noticed that occasionally GNOME shell starts up with a "black" screen. When this happens I can switch VT's to a console VT and run a:
sudo systemctl restart gdm
This also works over SSH.
Steps to reproduce
I have found that I can more readily reproduce it like this:
modprobe.blacklist=amdgpu
- Boot the machine, it will get to GDM, leave it idle.
- Over SSH run
sudo modprobe amdgpu
- Observe that GDM is stuck on a black screen.
- Restart gdm and see it starts working again.
What happened
Black screen at GDM
What did you expect to happen
GDM login screen
Relevant logs, screenshots, screencasts etc.
I have a suspicion this is related to how GNOME shell is handling a simpledrm provided /dev/dri/card0
. This node goes away when amdgpu is loaded (in favor of /dev/dri/card1
).
Edited by Mario Limonciello