local-display-factory: Skip simpledrm while checking for settled

Some platforms the DRM driver may take more time to load and this
will mean that GDM starts up using simpledrm instead of the proper
KMS driver.

To avoid this problem, skip simpledrm when checking if a given node
is settled.

Fixes: https://gitlab.gnome.org/GNOME/mutter/-/issues/2909
Suggested-by: Ray Strode <halfline@gmail.com>
Tested-by: Mario Limonciello <mario.limonciello@amd.com>
Tested-by: Hans de Goede <hdegoede@redhat.com>
Signed-off-by: Mario Limonciello <mario.limonciello@amd.com>